[package]
name = "minieth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # A generic serialization/deserialization framework
serde_json = "1.0" # A JSON serialization file format
hex = "0.4.3" # Encoding and decoding data into/from hexadecimal representation.
serde-hex = "0.1.0" # Hexadecimal encoding/decoding with serde.
sha3 = "0.9.1" # SHA-3 (Keccak) hash function
